--- a/index.html
+++ b/index.html
@@ -1,11 +1,3 @@
-<!--
- * @Author       : syf
- * @Date         : 2022-01-02 21:30:09
- * @LastEditors  : syf
- * @LastEditTime : 2022-01-02 21:30:50
- * @FilePath     : \shaoyangfan.github.io\index.html
- * @Detail       : 
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,6 +6,6 @@
   <title></title>
 </head>
 <body>
-  Hello my github
+  Hello my githubs!!!
 </body>
 </html>
