--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title></title>
-</head>
-<body>
-  Hello my githubs!!!
-  项目没有更新
-</body>
-</html>
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>updatevue</title><link href="/css/chunk-26aecfdb.45ad1bc1.css" rel="prefetch"><link href="/css/chunk-28fb83bc.5e5e2ba3.css" rel="prefetch"><link href="/js/chunk-26aecfdb.98864b67.js" rel="prefetch"><link href="/js/chunk-28fb83bc.c0bf333d.js" rel="prefetch"><link href="/js/chunk-2d0ab315.f76ea27e.js" rel="prefetch"><link href="/js/chunk-2d0c0276.f4ff5e32.js" rel="prefetch"><link href="/css/app.0b6b1987.css" rel="preload" as="style"><link href="/css/chunk-vendors.be26bac4.css" rel="preload" as="style"><link href="/js/app.ee873f64.js" rel="preload" as="script"><link href="/js/chunk-vendors.8df734cb.js" rel="preload" as="script"><link href="/css/chunk-vendors.be26bac4.css" rel="stylesheet"><link href="/css/app.0b6b1987.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but updatevue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.8df734cb.js"></script><script src="/js/app.ee873f64.js"></script></body></html>
